samples/_failures_safe/1761163786_f6612e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b6e0841.c: In function ‘main’:
./samples/SAFE/__tmp_5b6e0841.c:170:16: error: missing terminating " character
  170 |         printf("No input
      |                ^~~~~~~~~
./samples/SAFE/__tmp_5b6e0841.c:170:9: error: expected expression at end of input
  170 |         printf("No input
      |         ^~~~~~
./samples/SAFE/__tmp_5b6e0841.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b6e0841.c:170:9: error: expected declaration or statement at end of input
